# lilyexplorer

./: .gitignore  ANALYSIS_NOTEBOOKS.md  CLAUDE.md  CLEAN_SEMISUPERVISED_SUMMARY.md  DEVELOPMENT_SETUP.md  FUZZY_MATCHING_EXPERIMENT.md  GEOSCIENCE_RESULTS.md  GIT_WORKFLOW.md  IODP_ML_DATA_COLLECTION_RECOMMENDATIONS.md  LILY-AVS.ipynb  MISSING_DATA_INVESTIGATION_SUMMARY.md  NON_GAUSSIAN_CLUSTERING_METHODS.md  RETRAIN_VAE_FILTERED_PLAN.md  SCIENTIFIC_INSIGHTS.md  SEMISUPERVISED_VAE_CLASSIFIER_SUMMARY.md  SEMISUP_VAE_V2_14_SUMMARY.md  VAE_CLASSIFIER_INVESTIGATION_SUMMARY.md  VAE_FINAL_SUMMARY.md  VAE_MODELS.md  VAE_PROJECT_COMPLETE_HISTORY.md  VAE_QUICK_SUMMARY.txt  VAE_SCIENTIFIC_METHODOLOGY.md  VAE_V2_6_10_SUMMARY.md  analyze_additional_feature_coverage.py  analyze_alternative_features.py  analyze_binning_strategy.py  analyze_classifier_confusion.py  analyze_feature_coverage_overlap.py  analyze_latent_distribution.py  analyze_latent_distributions.py  analyze_lithology_distribution.py  analyze_measurement_coverage.py  analyze_mscl_overlap_50cm.py  analyze_no_ngr_coverage.py  analyze_rgb_density.py  analyze_train_test_distribution_mismatch.py  analyze_vae_latent_distributions.ipynb  analyze_vae_latent_distributions.py  beta_1e10_to_1_results.csv  beta_annealing_results.csv  (+192 more)
.ipynb_checkpoints/: LILY-AVS-checkpoint.ipynb  borehole-age-checkpoint.ipynb  explore_CaCO3-checkpoint.ipynb  explore_accum-checkpoint.ipynb  explore_netcdf-checkpoint.ipynb  gra_analysis-checkpoint.ipynb  raw_data_visualization-checkpoint.ipynb  train_beta_annealing-checkpoint.py  (+7 more)
(+123 files in other folders)
